# fastzero-madr

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yaml  dockerfile  entrypoint.sh  pyproject.toml
madr/database/: database.py  models.py
madr/database/migrations/: env.py
madr/database/migrations/versions/: 6e9827dc8a01_create_default_tables.py  be9734bb6b2e_create_default_tables.py
madr/infra/: __init__.py  configs.py
madr/server/: __init__.py
madr/server/routers/: accounts.py  books.py  novelists.py
madr/server/schemas/: accounts.py  books.py  novelist.py
madr/server/services/: account_service.py  auth_service.py  book_service.py  novelist_service.py
madr/tests/: conftest.py  test_accounts.py  test_auth.py  test_base_api.py  test_books.py  test_database.py  test_novelists.py  test_saniteze_string.py  test_security.py
madr/tools/: hash.py  sanitize.py  security.py
